feat: bypass upstream/main checkout

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ubuntu-*-cloudimg-console.log
 
 ### to ignore changes in a working copy
-.ignore_changes
+#.ignore_changes
 
 ### compile configurations added by users
 /config-*.conf
